# bdc

./: Makefile  README.org  main.py  pyproject.toml  setup.cfg
bdc/: cache.py  db.py  design.py  design.ui  node.py  tree.py
bdc/ui/: app.py  design.py  design.ui  qcache.py  qdb.py  qnode.py
tests/: test_bdc.py  test_cache.py  test_db.py  test_node.py  test_tree.py
