[tool.poetry]
name = "bdc"
version = "0.1.0"
description = "BD cache"
authors = ["Alexander Kapustin <dyens@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.7.5"
pyqt5 = "^5.13.2"

[tool.poetry.dev-dependencies]
mypy = "^0.720.0"
pytest = "^5.0"
pytest-cov = "^2.7"
wemake-python-styleguide = "^0.12.5"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
